# pulse

./: .gitignore  Makefile  README.md  astro.config.mjs  package.json
.github/workflows/: release.yml
app/components/: App.svelte  GitManager.svelte  ImageUpload.svelte  IpInfo.svelte  ProductPrice.svelte  SystemDashboard.svelte  XiaomiSpeaker.svelte
app/layouts/: Layout.astro
app/lib/services/: mijia.ts
app/pages/: index.astro
app/styles/: global.css
homebrew-tap-template/: README.md
homebrew-tap-template/Casks/: pulse.rb
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: App.svelte  App.tsx  IpInfo.svelte  IpInfo.tsx  ProductPrice.tsx  SystemDashboard.tsx
src/lib/services/: ipinfo.ts  product.ts
src/pages/: index.astro
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/src/: lib.rs
tauri/src/modules/: config.rs  git.rs  mijia.rs  mod.rs  system.rs  tray.rs  upload.rs  utils.rs
