[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
sysinfo = "0.36.1"
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSAttributedString", "NSColor", "NSStatusItem", "NSStatusBar", "NSFont", "NSParagraphStyle", "NSMenu", "NSMenuItem"] }
objc2-foundation = { version = "0.3.2", features = ["NSAttributedString", "NSString", "NSDictionary", "NSValue"] }
arboard = { version = "3.4", features = ["image-data"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["multipart", "blocking"] }
base64 = "0.22"
image = "0.25"
toml = "0.8"
dirs = "6.0"
